<resources>
    <string name="app_name">HZW</string>
    <string name="button_next_character">Next Character</string>
    <string name="button_next_radical">Next Radical</string>
    <string name="button_return">Return</string>
    <string name="button_finish">Finish</string>
    <string name="button_next_page">Next page</string>
    <string name="button_character_learning">Character</string>
    <string name="button_phonogram_learning">Phonogram</string>
    <string name="button_pictogram_learning">Pictogram</string>
    <string name="button_radical_learning">Component</string>
    <string name="button_knowledge">Knowledge</string>
    <string name="button_main_learning">MainLearning</string>
    <string name="button_test">Test</string>
    <string name="button_review">Review</string>
    <string name="slogan1">No Chinese Character</string>
    <string name="slogan2">No Chinese Culture</string>
    <string name="button_shape_component">semantic radical</string>
    <string name="button_voice_component">phonetic radical</string>
    <string name="test_chose_listen">Listen</string>
    <string name="test_chose_read">Read</string>
    <string name="test_chose_match">Match test</string>
    <string name="test_chose_tof">True or False</string>
    <string name="test_chose_complete">Complete Test</string>
    <string name="test_pronounce">Pronounce Test Sentence</string>
    <string name="button_test_submit">Submit</string>
    <string name="test_true">True</string>
    <string name="test_false">False</string>
    <string name="next_test">Next Test</string>
    <string name="test_err_msg">Answer:</string>
    <string name="test_show_char">To learn this character</string>
    <string name="button_play_video">Show the video</string>
    <string name="hzw">汉字屋</string>
    <string name="img_miss">img miss</string>
    <string name="chose_item">chose item text</string>
    <string name="test_listen">Listen</string>
    <string name="test_read">Read</string>
    <string name="begin_studying">Begin Studying</string>
</resources>
