<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_character"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/imagenotfound"
        android:id="@+id/iv_picture"/>

    <RadioGroup
        android:id="@+id/answer_chose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <RadioButton
            android:text="@string/test_true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_t"/>

        <RadioButton
            android:text="@string/test_false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_f"/>
    </RadioGroup>

    <Button
        android:text="@string/button_test_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_submint"/>

    <Button
        android:text="@string/next_test"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_next"/>

    <LinearLayout
        android:id="@+id/layout_error_msg"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/test_err_msg"/>
        <TextView
            android:id="@+id/tv_error_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <Button
        android:text="@string/test_show_char"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bt_show_character"/>

</LinearLayout>