<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/colorCharBG"
              android:paddingStart="25dp"
              android:paddingEnd="25dp"
              android:paddingTop="25dp"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="Hear True or False"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


        <Button
            android:layout_marginEnd="50dp"
            android:layout_gravity="end"
            android:background="@drawable/horn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/pronounce"/>
        <TextView
            android:layout_gravity="end"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="Again"
            android:gravity="center"/>
    </FrameLayout>


    <ImageView
        android:layout_marginTop="20dp"
        style="@style/TestTOfImg"
        android:src="@drawable/imagenotfound"
        android:id="@+id/iv_picture"/>


    <!--
    <RadioGroup
        android:id="@+id/answer_chose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <RadioButton
            android:text="@string/test_true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_t"/>

        <RadioButton
            android:text="@string/test_false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/radio_f"/>
    </RadioGroup>-->

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/layout_submit"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bt_true"
                android:text="@string/test_true"
                style="@style/TestTOFButton"/>

            <Button
                android:id="@+id/bt_false"
                android:text="@string/test_false"
                style="@style/TestTOFButton"/>

        </LinearLayout>

        <Button
            style="@style/NextButton"
            android:text="@string/next_test"
            android:id="@+id/bt_next"/>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_error_msg"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_err_msg"/>
        <TextView
            android:id="@+id/tv_error_msg"
            style="@style/TestErrorMsgText"/>
    </LinearLayout>

    <Button
        android:text="@string/test_show_char"
        style="@style/NextButton"
        android:id="@+id/bt_show_character"/>

</LinearLayout>